<resources>
    <string name="app_name">SmartSale</string>
    <string name="txtItem">Item</string>
    <string name="txtPrice">0.00</string>
    <string name="txtDescription">Description</string>
    <string name="txtCreateSaleHeader">Create Sale</string>
    <string name="editTxtEnterDescription">Enter description here please!</string>
    <string name="btnTakePhoto">Take Photo</string>
    <string name="btnBack">Back</string>
    <string name="btnPublish">Publish</string>
    <string name="btn_back">Back</string>
    <string name="btn_message">Message</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_send">Send</string>
    <string name="btn_reply">Reply</string>
    <string name="btn_get_location">Get location</string>
    <string name="label_price">Price</string>
    <string name="label_price_col">Price:</string>
    <string name="label_location">Location</string>
    <string name="label_location_col">Location:</string>
    <string name="label_send_message">Send Message</string>
    <string name="label_recipient">Recipient</string>
    <string name="label_recipient_col">Recipient:</string>
    <string name="label_regarding">Regarding</string>
    <string name="label_regarding_col">Regarding:</string>
    <string name="label_inbox">Inbox</string>
    <string name="label_from">From</string>
    <string name="label_from_col">From:</string>
    <string name="label_date">Date</string>
    <string name="label_date_col">Date:</string>
    <string name="label_read">Read</string>
    <string name="label_unread">Unread</string>
    <string name="label_message">Message</string>
    <string name="label_title">Title</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_application_id">809327973247815</string>
    <string name="fb_login_protocol_scheme">fb809327973247815</string>
    <string name="AppBarMenuSettings">Account settings</string>
    <string name="AppBarMenuLogOut">Log out</string>
    <string name="txtSaleHeader">Enter Title</string>
    <string name="txtSalePrice">Enter Price</string>
    <string name="btn_settings">Settings</string>
    <string name="btn_logout">Log Out</string>
    <string name="btn_market">Market</string>
    <string name="btn_login_register">Login/Register</string>
    <string name="btn_make_a_sale">Create new sale</string>
    <string name="menu_Logout">Log Out</string>
    <string name="menu_user">User</string>
    <string name="menu_messages" >Messages</string>
    <string name="label_eur_col">EUR:</string>
    <string name="notification_update_string">New message regarding:</string>
    <string name="service_notification_string">Welcome to SmartSale</string>
    <string name="message_sent">Message sent</string>
    <string name="logged_out">You have been logged out</string>
    <string name="logged_out_already">You are not logged in</string>
    <string name="logged_in">You are now logged in</string>
    <string name="logged_in_as">You are now logged in as:</string>
    <string name="log_in_first">You must log in first</string>
    <string name="logged_in_already">You are already logged in</string>
    <string name="canceled">Canceled</string>
    <string name="location_not_found">Could not get location at this time. Try again or input manually.</string>
    <string name="map_marker_text">Item location</string>
    <string name="reply_to">Reply to</string>
    <string name="reply_sent">Reply sent</string>

</resources>