<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="mhj.Grp10_AppProject.Activities.CreateSaleActivity"
    >

    <Button
        android:id="@+id/btnTakePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/btnTakePhoto"
        app:layout_constraintBottom_toBottomOf="@+id/btnPublish"
        app:layout_constraintStart_toStartOf="@+id/editTxtEnterDescription" />

    <Button
        android:id="@+id/btnPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:layout_marginEnd="@dimen/margin_outer"
        android:layout_marginBottom="@dimen/margin_outer"
        android:text="@string/btnPublish"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txtCreateSaleHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/txtCreateSaleHeader"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTxtEnterDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/editTxtEnterDescription"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnTakePhoto"
        app:layout_constraintEnd_toEndOf="@+id/createSaleTextPrice"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/createSaleTextPrice"
        app:layout_constraintTop_toBottomOf="@+id/createSaleTextLocation"
        app:layout_constraintVertical_bias="0.876" />

    <ImageView
        android:id="@+id/imgTaken"
        android:layout_width="291dp"
        android:layout_height="165dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateSaleHeader"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/createSaleTextTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_outer"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="@dimen/margin_outer"
        android:ems="10"
        android:hint="@string/label_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgTaken" />

    <EditText
        android:id="@+id/createSaleTextPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/label_price"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/createSaleTextTitle"
        app:layout_constraintStart_toStartOf="@+id/createSaleTextTitle"
        app:layout_constraintTop_toBottomOf="@+id/createSaleTextTitle" />

    <EditText
        android:id="@+id/createSaleTextLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/label_location"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/createSaleBtnGetLocation"
        app:layout_constraintStart_toStartOf="@+id/createSaleTextPrice"
        app:layout_constraintTop_toBottomOf="@+id/createSaleTextPrice" />

    <Button
        android:id="@+id/createSaleBtnGetLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/btn_get_location"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/createSaleTextLocation"
        app:layout_constraintEnd_toEndOf="@+id/createSaleTextPrice" />


</androidx.constraintlayout.widget.ConstraintLayout>