<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/imgItem"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginStart="@dimen/margin_outer"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/txtItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:maxLines="1"
        android:text="@string/txtItem"
        android:textSize="@dimen/text_size_larger"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtSalePrice"
        app:layout_constraintStart_toEndOf="@+id/imgItem"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="This is a very long title, even longer than fits" />

    <TextView
        android:id="@+id/txtDescription"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:maxLines="3"
        android:text="@string/txtDescription"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtSalePrice"
        app:layout_constraintStart_toEndOf="@+id/imgItem"
        app:layout_constraintTop_toBottomOf="@+id/txtItem"
        tools:text="This is a really really long description, so long that i don't even know what to write. I suppose it's so long that it might not even fit in the box in the end. Who knows, really? I guess i know, since the whole point of this text is to make it too long for the box. Oh, well." />

    <TextView
        android:id="@+id/txtSalePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_outer"
        android:text="@string/txtPrice"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtItem"
        tools:text="200" />
</androidx.constraintlayout.widget.ConstraintLayout>